<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MusicPlayerBasics</string>
    <string name="ShuffleBTN">Shuffle</string>
    <string name="FavouritesBTN">Favourites</string>
    <string name="PlaylistBTN">Playlists</string>
    <string name="Total">Total songs:</string>
    <string name="Song">Song:</string>
    <string name="Start">00:00</string>
    <string name="End">Loading...</string>
    <string name="RepeatBTN">Repeat</string>
    <string name="TimerBTN">Timer</string>
    <string name="EqualizerBTN">Equalizer</string>
    <string name="ShareBTN">Share</string>
    <string name="min15">15 минут</string>
    <string name="min30">30 минут</string>
    <string name="min45">45 минут</string>
    <string name="min60">1 час</string>
    <string name="o" tools:ignore="ExtraTranslation">open</string>
    <string name="c">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="custom">Custom</string>
    <string name="presets">Presets</string>
    <string name="bass_boost">Bass Boost</string>
    <string name="equalizer">Equalizer</string>
    <string name="enable">Enable</string>
</resources>