<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bgPlayer"
    android:layout_gravity="center">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">


        <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:layout_marginTop="15dp"
    android:layout_weight="1">
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textColor="@color/white"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"
        tools:ignore="NestedWeights"
        />

    <ImageButton
        android:id="@+id/favouriteBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_favorite_border_24"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
</LinearLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/albumFont"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/curved"
        android:orientation="vertical"
        android:elevation="5dp"
        app:cardCornerRadius="35dp"
        app:cardBackgroundColor="#33000000">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/albumIMGFont"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/icon"
            android:layout_gravity="center"
            app:shapeAppearanceOverlay="@style/curved"
            app:strokeColor="@color/black"
            />

</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/albumBack"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/curved"
        android:orientation="vertical"
        android:elevation="5dp"
        app:cardCornerRadius="35dp"
        app:cardBackgroundColor="#33000000"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/albumIMGBack"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:background="@color/black"
            app:shapeAppearanceOverlay="@style/curved"
            app:strokeColor="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:id="@+id/AlbumMETA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Total"
            android:layout_marginStart="10dp"
            android:textColor="#DEE0E2"
            android:textSize="11sp"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:layout_marginTop="15dp"
            android:gravity="center" />
        <TextView
            android:id="@+id/GenreMETA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Total"
            android:layout_marginStart="10dp"
            android:textColor="#E6E6E6"
            android:textSize="11sp"
            android:layout_marginTop="15dp"
            android:gravity="center" />
            <TextView
                android:id="@+id/BitrateMETA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Total"
                android:layout_marginStart="10dp"
                android:textColor="#E6E6E6"
                android:textSize="11sp"
                android:layout_marginTop="15dp"
                android:gravity="center" />
            <TextView
                android:id="@+id/SampleRateMETA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Total"
                android:layout_marginStart="10dp"
                android:textColor="#E6E6E6"
                android:textSize="11sp"
                android:layout_marginTop="15dp"
                android:gravity="center" />
            <TextView
                android:id="@+id/DepthMETA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Total"
                android:layout_marginStart="10dp"
                android:textColor="#E6E6E6"
                android:textSize="11sp"
                android:layout_marginTop="15dp"
                android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/formatLogo"
                android:layout_width="65dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/flac"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:id="@+id/ChannelsMETA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Total"
                android:layout_marginStart="10dp"
                android:textColor="#E6E6E6"
                android:textSize="13sp"
                android:layout_marginTop="15dp"
                android:gravity="center" />
            </LinearLayout>
        <ImageView
            android:id="@+id/hiresLogo"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:visibility="invisible"
            android:src="@drawable/hi_res_logo"/>
        </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/songTITLE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/Song"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_weight="1"
        />

    <LinearLayout
        android:id="@+id/seek"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        >
<TextView
    android:id="@+id/durationCURRENT"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:textColor="@color/white"
    android:textSize="13sp"
    android:text="@string/Start"
    android:layout_gravity="start"
    android:gravity="center"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/SeekBarDuration"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            />
        <TextView
            android:id="@+id/durationEND"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:text="@string/End"
            android:layout_gravity="end"
            android:gravity="center"/>

    </LinearLayout>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    android:gravity="center"
    android:layout_weight="1">



    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton

        android:id="@+id/btnPREVIOUS"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:icon="@drawable/baseline_skip_previous_24"
        app:iconSize="40dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnPAUSE_PLAY"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginHorizontal="25dp"
        android:backgroundTint="@color/pink"
        app:icon="@drawable/baseline_pause_24"
        app:iconSize="40dp"
        app:iconTint="@color/white"
        app:shapeAppearanceOverlay="@style/curved"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnNEXT"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:icon="@drawable/baseline_skip_next_24"
        app:iconSize="40dp"
        tools:ignore="SpeakableTextPresentCheck" />

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="35dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/repeatBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/RepeatBTN"
            android:src="@drawable/baseline_repeat_24"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/shuffleBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/RepeatBTN"
            android:src="@drawable/baseline_shuffle_24"
            tools:ignore="TouchTargetSizeCheck"
            app:tint="@color/purple500" />

        <ImageButton
            android:id="@+id/equalizerBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/EqualizerBTN"
            android:src="@drawable/baseline_graphic_eq_24"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/timerBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/TimerBTN"
            android:src="@drawable/outline_timer_24"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/shareBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ShareBTN"
            android:src="@drawable/baseline_share_24"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/bassBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ShareBTN"
            android:src="@drawable/baseline_settings_remote_24"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>